<resources>
    <string name="app_name">babyName</string>
    <string name="name_baby">New Babys Name</string>
    <string name="selection_name">Selected Boy Or Girl and Both Of you</string>
    <string name="btn_a">A</string>
    <string name="btn_b">B</string>
    <string name="btn_c">C</string>
    <string name="btn_d">D</string>
    <string name="btn_e">E</string>
    <string name="btn_f">F</string>
    <string name="btn_g">G</string>
    <string name="btn_h">H</string>
    <string name="btn_i">I</string>
    <string name="btn_j">J</string>
    <string name="btn_k">K</string>
    <string name="btn_l">L</string>
    <string name="btn_m">M</string>
    <string name="btn_n">N</string>
    <string name="btn_o">O</string>
    <string name="btn_p">P</string>
    <string name="btn_q">Q</string>
    <string name="btn_r">R</string>
    <string name="btn_s">S</string>
    <string name="btn_t">T</string>
    <string name="btn_u">U</string>
    <string name="btn_v">V</string>
    <string name="btn_w">W</string>
    <string name="btn_x">X</string>
    <string name="btn_y">Y</string>
    <string name="btn_z">Z</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
